--- a/mongo/app/views/layouts/application.html.erb
+++ b/mongo/app/views/layouts/application.html.erb
@@ -8,6 +8,17 @@
 </head>
 <body>
 
+<% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %>">
+      <a href="#" data-dismiss="alert" class="close">×</a>
+      <ul>
+        <li>
+          Alert: <%= value %>
+        </li>
+      </ul>
+    </div>
+<% end %>
+
 <%= yield %>
 
 </body>
