Added username/email sign in to postgres version.

--- a/postgres/app/views/layouts/application.html.erb
+++ b/postgres/app/views/layouts/application.html.erb
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Postgres</title>
+  <title>Mongo</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %>">
+      <a href="#" data-dismiss="alert" class="close">×</a>
+      <ul>
+        <li>
+          Alert: <%= value %>
+        </li>
+      </ul>
+    </div>
+<% end %>
 
 <%= yield %>
 
